--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -134,6 +134,8 @@
 .pr-6 { padding-right: 1.5rem; }
 .pr-8 { padding-right: 2rem; }
 
+.pt-6 {padding-top: 1.5rem;}
+
 // Responsive padding (lg breakpoint)
 @media (min-width: 1024px) {
 	.lg\:p-0 { padding: 0; }
