--- a/scss/editor-style.scss
+++ b/scss/editor-style.scss
@@ -25,6 +25,7 @@
 @import '../src/blocks/faq/editor.scss';
 @import '../src/blocks/video-background/editor.scss';
 @import '../src/blocks/block-post/editor.scss';
+@import '../src/blocks/sarika-container/editor.scss';
 
 /* Google Fonts sudah di-enqueue via PHP */
 
