--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -1257,13 +1257,30 @@
     }
   }
 }
+.tax-service-category,
 .post-type-archive-ane-service {
+  .page-header {
+    width: 70%;
+    margin: auto;
+    @media (max-width: 767px) {
+     width: 100%;
+  }
+  }
   @media (max-width: 767px) {
     .gap-6 {
       gap: 0.5rem;
     } 
   }
   
+}
+.post-type-archive-ane-testimoni {
+    .page-header {
+      width: 70%;
+      margin: auto;
+      @media (max-width: 767px) {
+        width: 100%;
+      }
+  }  
 }
 
 .sarika-page {
