--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -368,6 +368,10 @@
 			opacity: 1;
 			transform: translateY(0);
 			animation: bounceIn 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+			background-color: var(--sarika-color-white);
+			border-radius: 0 0 10px 10px;
+			padding: 20px;
+			margin-top: 15px;
 		}
 
 		@media (min-width: 1025px) {
